--- a/html/css/style.css
+++ b/html/css/style.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     position: absolute;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     top: 0;
